# Bunya-Jido

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.ko.md  README.md  pyproject.toml
.bunya-jido/: COMPONENTS.md  MAP_REVIEW.md  PROJECTIONS.md  REPOSITORY_THESIS.md  SCENARIOS.md  WORKFLOWS.md  bunya-jido.agent-evaluation.json  bunya-jido.agent-map.json  bunya-jido.blueprint.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: AGENT_UTILITY_EVALUATION.md  CONTRIBUTION_PLAN.md  RELEASING.md  SCANNER_COVERAGE.md  STUDIO_ATLAS_UPGRADE_BASELINE.md  STUDIO_BENCHMARK.md  demo.html  gallery.md  index.html
examples/coverage/: README.md  package.json  pyproject.toml
examples/coverage/data/: sample.csv
examples/coverage/docs/: contract.md
examples/coverage/runs/: events.jsonl  status.json
examples/coverage/src/coverage_app/: __init__.py  core.py  hint_text.py  worker.py
examples/coverage/web/: main.ts
examples/minimal/: README.md  hello.py  pyproject.toml
src/bunya_jido/: __init__.py  blueprint.py  cli.py  quality.py  render.py  scanner.py  schema.py  studio.py
src/bunya_jido/viewer/: index.template.html
tests/: test_blueprint.py  test_blueprint_v2.py  test_projection_quality.py  test_scanner_coverage.py  test_self_map.py  test_smoke.py  test_studio_benchmark.py  test_studio_prompt.py
tests/fixtures/: studio_benchmark_cases.json
