[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bunya-jido"
version = "0.3.1"
description = "Generate offline interactive repository architecture graphs, with optional LLM-authored blueprints."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bunya-Jido Contributors" }]
keywords = ["repository", "graph", "visualization", "architecture", "static-analysis", "offline-html"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.scripts]
bunya-jido = "bunya_jido.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bunya_jido.viewer" = ["*.html"]
