[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bunya-jido"
version = "0.3.1"
description = "Create offline semantic repository maps and bounded coding-agent context from reviewable evidence."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bunya-Jido Contributors" }]
keywords = ["repository", "semantic-map", "architecture", "coding-agents", "static-analysis", "offline-html"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jeong87/Bunya-Jido"
Repository = "https://github.com/jeong87/Bunya-Jido"
Issues = "https://github.com/jeong87/Bunya-Jido/issues"
Documentation = "https://jeong87.github.io/Bunya-Jido/"
Changelog = "https://github.com/jeong87/Bunya-Jido/blob/main/CHANGELOG.md"

[project.scripts]
bunya-jido = "bunya_jido.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bunya_jido.viewer" = ["*.html"]
